<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Нумерология</string>
    <string name="action_settings">Settings</string>
	<string name="mainMenu">Главное меню</string>  
	<string name="next">Далее</string>
	<string name="first_partner">Карточка данных</string>  
	<string name="exit">Выход</string>  
	<string name="first_partner_choose">Выбрать данные для расчета</string>  
	<string name="edit">Редактировать данные</string>  
	<string name="delete">Удалить запись</string>  
	<string name="journal">Журнал</string>  
	<string name="clear">Очистить данные</string>  
				
					
	
<!-- -->
<string name="banner_ad_unit_id">ca-app-pub-3272146718873741/9503202510</string> 
<!-- This is an ad unit ID for a test ad. Replace with your own banner ad unit id. -->
<!-- Test ID	<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
<!-- StartAd.mobi ID-->
<string name="banner_start_ad_mobi_id">55f6dbed228c792800000000</string> 

<string name="compat_rate">Нумерологическая карта</string>
<string name="partner_1">1-Первый партнер</string>
<string name="partner_1j">Данные для расчета</string>
<string name="number">Число</string>
<string name="partn1">1</string>
<string name="partn2">2</string>
<string name="rating">Рейтинг</string>
<string name="soul">Души</string>
<string name="destiny">Судьбы</string>
<string name="personality">Личности</string>
<string name="lifepath">Жизненного пути</string>
<string name="maturity">Зрелости</string>
<string name="peak">Пика</string>
<string name="problem">Проблемы</string>
<string name="main_cycle">Основного цикла</string>
<string name="summary">Итоговый рейтинг</string>
<string name="detail">Подробнее? - нажмите на результаты в таблице</string>
<string name="concord">Группа конкорда</string>
<string name="pers_year">Личный год</string>
<string name="input_data">Введите данные</string>
<string name="name">Полное имя</string>
<string name="patonymic">Отчество</string>
<string name="birthday">Дата рождения</string>
<string name="surname">Фамилия</string>
<string name="edit_data">Отредактируйте данные</string>
<string name="carma_debt">Кармические уроки</string>
<string name="period">Периода жизни</string>
<string name="mc_period">Периода основного цикла</string>
<string name="pers_month">Личный месяц</string>
<string name="pers_day">Личный день</string>
<string name="birth_day">Дня рождения</string>


</resources>
