<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_vertical|fill_horizontal"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".MainMenu" >

    <LinearLayout
        android:id="@+id/advLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="top"
        android:orientation="vertical" >

    </LinearLayout>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="4"
        android:text="@string/journal"
        android:textColor="@color/seawave"
        android:textSize="@dimen/sp24"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layoutLV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="85"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/lvData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="4"
        android:text="@string/partner_1j"
        android:textColor="@color/seawave"
        android:textSize="@dimen/sp20"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/firstPartner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/style_item"
        android:textColor="@color/black" />
        
        <Button
            android:id="@+id/bCalc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:alpha="0.8"
            android:background="@drawable/butcalc" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/adLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical" >

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" >
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</LinearLayout>